# lc3

./: .gitignore  CMakeLists.txt  README.md  Virtual Machines.pptx
examples/: greet  helloworld
inc/lc3/: 1  cpu.h  encoding.h  extend.h  instructions.h  memory.h  opcodes.h  operands.h  types.h
src/: cpu.cpp  main.cpp
written/: written.adoc  written.html
